hard-gists/1521059/run.log
=== Docker Run Log for 1521059 ===
Started at: Mi 29. Okt 12:17:42 CET 2025

[2025-10-29 12:17:42] START: Running container for 1521059
[2025-10-29 12:17:42] SUCCESS: Container ddedd68f177744c96702ba0160a7cae23643667e9de6a6c711794c9473a3ed69 started for 1521059
=== Container logs for 1521059 ===
  File "/snippet.py", line 9
    print 'FPS =',  player.get_fps()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1521059 ===
[2025-10-29 12:17:44] INFO: Container ddedd68f177744c96702ba0160a7cae23643667e9de6a6c711794c9473a3ed69 has stopped
